--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,6 +1,7 @@
 .title {
-    color: red;
-    span {
-        color: blue;
-    }
+  color: red;
+  font-family: "Roboto";
+  span {
+    color: blue;
+  }
 }
