--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,7 @@
   --white: #FFFFFF;
   --gray-100:#e1e1e6;
   --gray-300: #a8a8b3;
+  --gray-800:#26292e;
   --gray-900:#121214;
 
   --cyan-500: #61dafb;
